--- a/GitHubSearch/src/index.html
+++ b/GitHubSearch/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Implement Git hub </title>
+    <title>Git Hub Search </title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
